--- a/css/app.css
+++ b/css/app.css
@@ -289,7 +289,9 @@ body, html {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
   grid-gap: 1.5rem;
-  grid-template-areas: 'img-1 img-2 img-3 img-3' 'img-1 img-4 img-5 img-6' 'img-7 img-7 img-8 img-6'; }
+  grid-template-areas: 'img-1 img-2 img-3 img-3'
+ 'img-1 img-4 img-5 img-6'
+ 'img-7 img-7 img-8 img-6'; }
 
 .image-gallery a {
   width: 100%;
@@ -443,6 +445,9 @@ body {
   text-align: center;
   display: block;
   padding-top: 200px; }
+ @media only screen and (min-width: 768px) {
+   .logo-wrapper {
+     padding-top: 150px;} }
   .logo-wrapper img {
     width: 85%; }
     @media only screen and (min-width: 1024px) {
