--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
 .mt-20 {
   margin-top: 20px; }
 
@@ -63,13 +62,43 @@
 
 body, html {
   height: 100% !important;
+  background-color: #282e34;
   font-family: "Lato", sans-serif !important;
   font-weight: 400 !important;
   line-height: 1.8em !important;
   color: #666 !important; }
 
 .nav-wrapper {
-  display: none; }
+  position: fixed;
+  width: 100%;
+  line-height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 25px 10px 20px;
+  z-index: 10; }
+  .nav-wrapper .logo {
+    max-width: 150px;
+    display: block; }
+    .nav-wrapper .logo img {
+      width: 100%;
+      height: auto; }
+  .nav-wrapper .nav-bar {
+    display: none; }
+    .nav-wrapper .nav-bar ul {
+      margin-bottom: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+      .nav-wrapper .nav-bar ul li {
+        display: block;
+        padding: 0;
+        font-size: 18px; }
+        .nav-wrapper .nav-bar ul li a {
+          text-decoration: none;
+          color: #fff; }
+          .nav-wrapper .nav-bar ul li a:hover {
+            color: #5CE0E6; }
 
 .black-bg {
   background: #000;
@@ -83,50 +112,60 @@ body, html {
   background-attachment: fixed; }
 
 .hero-area {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url("/images/hero-img.jpg");
-  min-height: 100%; }
+  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.68)), url("/images/flow-img2.jpg");
+  min-height: 100%;
+  padding: 250px 0 20px; }
 
 .img2-area {
-  background-image: url("/images/image-2.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.55)), url("/images/flow-coffee-seeds.jpg");
   min-height: 400px; }
 
 .img3-area {
-  background-image: url("/images/image-4.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.68)), url("/images/flow-img4.jpg");
   min-height: 400px; }
+
+.img4-area {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.68)), url("/images/chocolate-cake.jpg");
+  background-size: cover;
+  background-position: bottom center;
+  min-height: 600px; }
 
 .section {
   text-align: center;
-  padding: 50px 80px; }
+  padding: 50px 0; }
 
 .section-light {
   background-color: #f4f4f4;
   color: #666; }
 
 .section-dark {
-  background-color: #282e34;
+  background: linear-gradient(#05171b, #282e34);
   color: #fff; }
 
 .hero-text {
-  position: absolute;
-  top: 31%;
   width: 100%;
   text-align: center;
   letter-spacing: 8px;
-  height: 100%; }
+  height: 100%;
+  padding: 0 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto; }
   .hero-text .hero-title {
-    font-size: 40px;
+    font-size: 38px;
     font-weight: 600;
     color: #fff; }
   .hero-text .hero-subtitle {
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 600;
     color: #5CE0E6; }
   .hero-text .hero-content {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 400;
     color: #fff;
-    letter-spacing: 3px;
-    padding: 0 250px; }
+    letter-spacing: 3px; }
   .hero-text .menu-btn {
     text-decoration: none;
     background: transparent;
@@ -191,44 +230,6 @@ body, html {
     font-size: 30px;
     font-weight: bold; }
 
-.mobile-nav-wrapper {
-  position: fixed;
-  width: 100%;
-  line-height: 60px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 60px;
-  z-index: 10;
-  top: 0; }
-  .mobile-nav-wrapper .logo {
-    max-width: 100px; }
-    .mobile-nav-wrapper .logo img {
-      width: 100%;
-      height: auto; }
-
-.mobile-nav-bar {
-  position: fixed;
-  background: #000;
-  width: 100%;
-  top: 0;
-  display: none;
-  justify-content: center;
-  padding: 50px 0;
-  text-align: center; }
-  .mobile-nav-bar ul {
-    display: block;
-    margin-bottom: 0;
-    list-style: none; }
-    .mobile-nav-bar ul li {
-      padding: 10px 0;
-      font-size: 20px; }
-      .mobile-nav-bar ul li a {
-        text-decoration: none;
-        color: #fff; }
-        .mobile-nav-bar ul li a:hover {
-          color: #5CE0E6; }
-
 .burger {
   display: block; }
   .burger div {
@@ -238,41 +239,52 @@ body, html {
     margin: 5px; }
 
 .active {
-  display: flex; }
+  display: flex !important;
+  position: absolute;
+  top: 90%;
+  left: 0;
+  background: #000;
+  width: 100%;
+  justify-content: center; }
+
+@media only screen and (min-width: 768px) {
+  .hero-text {
+    width: 50%; }
+    .hero-text .hero-title {
+      font-size: 40px;
+      font-weight: 600;
+      color: #fff; }
+    .hero-text .hero-subtitle {
+      font-size: 30px;
+      font-weight: 600;
+      color: #5CE0E6; }
+    .hero-text .hero-content {
+      font-size: 18px;
+      font-weight: 400;
+      color: #fff;
+      letter-spacing: 3px; } }
 
 @media only screen and (min-width: 980px) {
   .nav-wrapper {
-    position: fixed;
-    width: 100%;
-    line-height: 60px;
-    display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px 60px;
-    z-index: 10; }
-    .nav-wrapper .logo {
-      max-width: 150px;
+    padding: 10px 60px; }
+    .nav-wrapper .nav-bar {
       display: block; }
-      .nav-wrapper .logo img {
-        width: 100%;
-        height: auto; }
-    .nav-wrapper .nav-bar ul {
-      margin-bottom: 0; }
-      .nav-wrapper .nav-bar ul li {
-        display: inline-block;
-        padding: 20px;
-        font-size: 20px; }
-        .nav-wrapper .nav-bar ul li a {
-          text-decoration: none;
-          color: #fff; }
-          .nav-wrapper .nav-bar ul li a:hover {
-            color: #5CE0E6; }
+      .nav-wrapper .nav-bar ul {
+        margin-bottom: 0;
+        display: block; }
+        .nav-wrapper .nav-bar ul li {
+          display: inline-block;
+          padding: 20px;
+          font-size: 20px; }
+          .nav-wrapper .nav-bar ul li a {
+            text-decoration: none;
+            color: #fff; }
+            .nav-wrapper .nav-bar ul li a:hover {
+              color: #5CE0E6; }
   .burger {
     display: none; }
-  .mobile-nav-wrapper {
-    display: none; }
-    .mobile-nav-wrapper .logo {
-      display: none; }
   .wrapper-menu-images .halfscreen-content {
     font-size: 40px; } }
 
@@ -282,16 +294,21 @@ body, html {
   background-color: #282e34;
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  margin-bottom: 50px; }
 
 .image-gallery {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
   grid-gap: 1.5rem;
-  grid-template-areas: 'img-1 img-2 img-3 img-3'
- 'img-1 img-4 img-5 img-6'
- 'img-7 img-7 img-8 img-6'; }
+  grid-template-areas: 'img-1 img-1 img-1 img-1' 'img-2 img-2 img-2 img-2' 'img-3 img-3 img-3 img-3' 'img-4 img-4 img-4 img-4' 'img-5 img-5 img-5 img-5' 'img-6 img-6 img-6 img-6' 'img-7 img-7 img-7 img-7' 'img-8 img-8 img-8 img-8'; }
+  @media only screen and (min-width: 768px) {
+    .image-gallery {
+      grid-template-areas: 'img-1 img-1 img-2 img-2' 'img-3 img-3 img-4 img-4' 'img-5 img-5 img-6 img-6' 'img-7 img-7 img-8 img-8'; } }
+  @media only screen and (min-width: 1024px) {
+    .image-gallery {
+      grid-template-areas: 'img-1 img-2 img-3 img-3' 'img-1 img-4 img-5 img-6' 'img-7 img-7 img-8 img-6'; } }
 
 .image-gallery a {
   width: 100%;
@@ -329,149 +346,145 @@ body, html {
 
 .img-1 {
   grid-area: img-1;
-  min-height: 51.5rem;
-  background-image: url("/images/pex-1.jpg"); }
+  background-image: url("/images/image-5.jpg");
+  background-position: center;
+  background-size: contain; }
+  @media only screen and (min-width: 1024px) {
+    .img-1 {
+      min-height: 51.5rem; } }
 
 .img-2 {
   grid-area: img-2;
-  background-image: url("/images/pex-2.jpg"); }
+  background-image: url("/images/flow-esp.jpg"); }
 
 .img-3 {
   grid-area: img-3;
-  background-image: url("/images/pex-3.jpg"); }
+  background-image: url("/images/flow-img3.jpg"); }
 
 .img-4 {
   grid-area: img-4;
-  background-image: url("/images/pex-4.jpg"); }
+  background-image: url("/images/flow-img4.jpg"); }
 
 .img-5 {
   grid-area: img-5;
-  background-image: url("/images/pex-5.jpg"); }
+  background-image: url("/images/flow-img5.jpg"); }
 
 .img-6 {
   grid-area: img-6;
-  min-height: 51.5rem;
-  background-image: url("/images/pex-6.jpg"); }
+  background-image: url("/images/menu-coffee.jpg"); }
+  @media only screen and (min-width: 1024px) {
+    .img-6 {
+      min-height: 51.5rem; } }
 
 .img-7 {
   grid-area: img-7;
-  background-image: url("/images/pex-7.jpg"); }
+  background-image: url("/images/flow-img2.jpg"); }
 
 .img-8 {
   grid-area: img-8;
-  background-image: url("/images/pex-8.jpg"); }
+  background-image: url("/images/flow-img1.jpg"); }
 
 .section-contact {
-  padding: 125px 0;
-  background-color: #282e34;
-  height: 100%;
-  text-align: center;
-  background-image: url(/images/contact-us.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat; }
-  .section-contact .container {
-    background-color: #00000083;
-    padding: 25px 10px; }
+  padding: 155px 0 50px;
+  height: 65vh;
+  text-align: center; }
+  .section-contact .text-box {
+    text-align: center;
+    background-color: transparent;
+    color: #fff;
+    margin-top: 50px;
+    font-size: 32px;
+    font-weight: 600;
+    margin-bottom: 40px; }
+    @media only screen and (min-width: 768px) {
+      .section-contact .text-box {
+        font-size: 42px; } }
+    .section-contact .text-box span {
+      background-color: #5CE0E6;
+      color: #282e34;
+      padding: 2px 5px;
+      margin-right: 5px;
+      border-radius: 4px; }
+  .section-contact .info {
+    margin-bottom: 40px; }
+    .section-contact .info span {
+      display: block;
+      font-size: 18px; }
+      @media only screen and (min-width: 768px) {
+        .section-contact .info span {
+          font-size: 22px; } }
+    .section-contact .info p {
+      font-size: 16px; }
+      @media only screen and (min-width: 768px) {
+        .section-contact .info p {
+          font-size: 18px; } }
+  .section-contact .contact-wrapper {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center; }
+    @media only screen and (min-width: 1130px) {
+      .section-contact .contact-wrapper {
+        flex-direction: row; } }
+    .section-contact .contact-wrapper .fb-posts, .section-contact .contact-wrapper .insta-posts {
+      width: 100%;
+      max-width: 500px;
+      max-height: 300px; }
+      .section-contact .contact-wrapper .fb-posts img, .section-contact .contact-wrapper .insta-posts img {
+        height: 100%;
+        width: 100%;
+        border-radius: 25px; }
 
 .footer {
   background-color: #212529;
   padding: 50px 0 0;
   color: #fff; }
   .footer ul {
+    margin: 30px 0;
     list-style: none; }
+  .footer .social-wrapper {
+    margin: 30px 0; }
+    .footer .social-wrapper span {
+      margin: 10px; }
+      .footer .social-wrapper span a {
+        text-decoration: none;
+        color: #fff;
+        cursor: pointer; }
+        .footer .social-wrapper span a:hover {
+          text-decoration: none; }
+        .footer .social-wrapper span a i {
+          font-size: 42px; }
+  .footer .mapouter {
+    position: relative;
+    padding-bottom: 30.25%;
+    padding-top: 5px;
+    height: 0;
+    overflow: hidden; }
+    @media only screen and (min-width: 768px) {
+      .footer .mapouter {
+        padding-bottom: 43.25%; } }
+  .footer iframe {
+    width: 100%;
+    height: auto; }
+  .footer .copy {
+    background-color: #252a2e;
+    padding: 10px 0; }
 
-.copy {
-  background-color: #252a2e;
-  padding: 10px 0; }
-
-iframe {
+.cafe-menu {
+  height: auto;
   width: 100%;
-  height: 100%; }
-
-.leftside, .rightside {
-  height: 50vh;
-  width: 100%;
-  font-family: 'Monoton', cursive; }
-
-@media only screen and (min-width: 768px) {
-  .leftside, .rightside {
-    height: 100vh; } }
-
-.leftside {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url(/images/menu-coffee.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-.rightside {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url(/images/menu-food.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; }
-
-.halfscreen-content {
-  position: relative;
-  top: 70%;
-  font-size: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-  .halfscreen-content a {
-    text-decoration: none;
-    color: #fff; }
-    .halfscreen-content a:hover {
-      color: #5CE0E6;
-      font-size: 45px;
-      transition: 0.35s ease-out;
-      text-decoration: none; }
-
-@media only screen and (min-width: 1024px) {
-  .halfscreen-content {
-    top: 75%;
-    font-size: 50px; }
-    .halfscreen-content a {
-      text-decoration: none; }
-      .halfscreen-content a:hover {
-        font-size: 55px;
-        transition: 0.35s ease-out;
-        text-decoration: none; } }
-
-body {
-  background-color: #282e34 !important;
-  font-family: "Lato", sans-serif !important; }
-
-.logo-wrapper {
-  text-align: center;
-  display: block;
+  font-family: "Lato", sans-serif !important;
+  background: linear-gradient(#05171b, #282e34);
   padding-top: 150px; }
- @media only screen and (min-width: 768px) {
-   .logo-wrapper {
-     padding-top: 200px;} }
-  .logo-wrapper img {
-    width: 85%; }
-    @media only screen and (min-width: 1024px) {
-      .logo-wrapper img {
-        width: 65%; } }
 
-.text-box {
+.image-menu-wrapper {
+  display: block;
   text-align: center;
-  background-color: transparent;
-  color: #fff;
-  margin-top: 25px;
-  font-size: 16px;
-  font-weight: 600; }
-  @media only screen and (min-width: 768px) {
-    .text-box {
-      margin-top: 40px;
-      font-size: 18px; } }
-  @media only screen and (min-width: 1024px) {
-    .text-box {
-      margin-top: 50px;
-      font-size: 22px; } }
-  .text-box span {
-    background-color: #5CE0E6;
-    color: #282e34;
-    padding: 2px 5px;
-    margin-right: 5px;
-    border-radius: 4px; }
+  max-width: 680px;
+  margin: 0 auto 20px; }
+  .image-menu-wrapper img {
+    width: 100%;
+    height: auto; }
+
+.mfp-arrow {
+  outline: none !important; }
